add_executable(ch07_templates templates.cpp)
add_executable(ch07_constrained_templates constrained_templates.cpp)
add_executable(ch07_value_template_arguments value_template_arguments.cpp)
add_executable(ch07_template_argument_deduction template_argument_deduction.cpp)
add_executable(ch07_parameterized_operations parameterized_operations.cpp)
add_executable(ch07_template_mechanisms template_mechanisms.cpp)
